Animated birds in the background
Bird Manager
Reading bird sprite sheet